alexico_web/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> using_decl namespace_decl
Rule 2     using_decl -> USING IDENTIFICADOR SEMICOLON
Rule 3     namespace_decl -> NAMESPACE IDENTIFICADOR LBRACE class_decl RBRACE
Rule 4     class_decl -> CLASS IDENTIFICADOR LBRACE method_decl RBRACE
Rule 5     method_decl -> STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFICADOR RPAREN LBRACE statement RBRACE
Rule 6     statement -> CONSOLE DOT WRITELINE LPAREN CADENA RPAREN SEMICOLON

Terminals, with rules where they appear

CADENA               : 6
CLASS                : 4
CONSOLE              : 6
DOT                  : 6
ERROR                : 
IDENTIFICADOR        : 2 3 4 5
LBRACE               : 3 4 5
LBRACKET             : 5
LPAREN               : 5 6
MAIN                 : 5
NAMESPACE            : 3
RBRACE               : 3 4 5
RBRACKET             : 5
RPAREN               : 5 6
SEMICOLON            : 2 6
STATIC               : 5
STRING               : 5
USING                : 2
VOID                 : 5
WRITELINE            : 6
error                : 

Nonterminals, with rules where they appear

class_decl           : 3
method_decl          : 4
namespace_decl       : 1
programa             : 0
statement            : 5
using_decl           : 1

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . using_decl namespace_decl
    (2) using_decl -> . USING IDENTIFICADOR SEMICOLON

    USING           shift and go to state 3

    programa                       shift and go to state 1
    using_decl                     shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> using_decl . namespace_decl
    (3) namespace_decl -> . NAMESPACE IDENTIFICADOR LBRACE class_decl RBRACE

    NAMESPACE       shift and go to state 5

    namespace_decl                 shift and go to state 4

state 3

    (2) using_decl -> USING . IDENTIFICADOR SEMICOLON

    IDENTIFICADOR   shift and go to state 6


state 4

    (1) programa -> using_decl namespace_decl .

    $end            reduce using rule 1 (programa -> using_decl namespace_decl .)


state 5

    (3) namespace_decl -> NAMESPACE . IDENTIFICADOR LBRACE class_decl RBRACE

    IDENTIFICADOR   shift and go to state 7


state 6

    (2) using_decl -> USING IDENTIFICADOR . SEMICOLON

    SEMICOLON       shift and go to state 8


state 7

    (3) namespace_decl -> NAMESPACE IDENTIFICADOR . LBRACE class_decl RBRACE

    LBRACE          shift and go to state 9


state 8

    (2) using_decl -> USING IDENTIFICADOR SEMICOLON .

    NAMESPACE       reduce using rule 2 (using_decl -> USING IDENTIFICADOR SEMICOLON .)


state 9

    (3) namespace_decl -> NAMESPACE IDENTIFICADOR LBRACE . class_decl RBRACE
    (4) class_decl -> . CLASS IDENTIFICADOR LBRACE method_decl RBRACE

    CLASS           shift and go to state 11

    class_decl                     shift and go to state 10

state 10

    (3) namespace_decl -> NAMESPACE IDENTIFICADOR LBRACE class_decl . RBRACE

    RBRACE          shift and go to state 12


state 11

    (4) class_decl -> CLASS . IDENTIFICADOR LBRACE method_decl RBRACE

    IDENTIFICADOR   shift and go to state 13


state 12

    (3) namespace_decl -> NAMESPACE IDENTIFICADOR LBRACE class_decl RBRACE .

    $end            reduce using rule 3 (namespace_decl -> NAMESPACE IDENTIFICADOR LBRACE class_decl RBRACE .)


state 13

    (4) class_decl -> CLASS IDENTIFICADOR . LBRACE method_decl RBRACE

    LBRACE          shift and go to state 14


state 14

    (4) class_decl -> CLASS IDENTIFICADOR LBRACE . method_decl RBRACE
    (5) method_decl -> . STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFICADOR RPAREN LBRACE statement RBRACE

    STATIC          shift and go to state 16

    method_decl                    shift and go to state 15

state 15

    (4) class_decl -> CLASS IDENTIFICADOR LBRACE method_decl . RBRACE

    RBRACE          shift and go to state 17


state 16

    (5) method_decl -> STATIC . VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFICADOR RPAREN LBRACE statement RBRACE

    VOID            shift and go to state 18


state 17

    (4) class_decl -> CLASS IDENTIFICADOR LBRACE method_decl RBRACE .

    RBRACE          reduce using rule 4 (class_decl -> CLASS IDENTIFICADOR LBRACE method_decl RBRACE .)


state 18

    (5) method_decl -> STATIC VOID . MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFICADOR RPAREN LBRACE statement RBRACE

    MAIN            shift and go to state 19


state 19

    (5) method_decl -> STATIC VOID MAIN . LPAREN STRING LBRACKET RBRACKET IDENTIFICADOR RPAREN LBRACE statement RBRACE

    LPAREN          shift and go to state 20


state 20

    (5) method_decl -> STATIC VOID MAIN LPAREN . STRING LBRACKET RBRACKET IDENTIFICADOR RPAREN LBRACE statement RBRACE

    STRING          shift and go to state 21


state 21

    (5) method_decl -> STATIC VOID MAIN LPAREN STRING . LBRACKET RBRACKET IDENTIFICADOR RPAREN LBRACE statement RBRACE

    LBRACKET        shift and go to state 22


state 22

    (5) method_decl -> STATIC VOID MAIN LPAREN STRING LBRACKET . RBRACKET IDENTIFICADOR RPAREN LBRACE statement RBRACE

    RBRACKET        shift and go to state 23


state 23

    (5) method_decl -> STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET . IDENTIFICADOR RPAREN LBRACE statement RBRACE

    IDENTIFICADOR   shift and go to state 24


state 24

    (5) method_decl -> STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFICADOR . RPAREN LBRACE statement RBRACE

    RPAREN          shift and go to state 25


state 25

    (5) method_decl -> STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFICADOR RPAREN . LBRACE statement RBRACE

    LBRACE          shift and go to state 26


state 26

    (5) method_decl -> STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFICADOR RPAREN LBRACE . statement RBRACE
    (6) statement -> . CONSOLE DOT WRITELINE LPAREN CADENA RPAREN SEMICOLON

    CONSOLE         shift and go to state 28

    statement                      shift and go to state 27

state 27

    (5) method_decl -> STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFICADOR RPAREN LBRACE statement . RBRACE

    RBRACE          shift and go to state 29


state 28

    (6) statement -> CONSOLE . DOT WRITELINE LPAREN CADENA RPAREN SEMICOLON

    DOT             shift and go to state 30


state 29

    (5) method_decl -> STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFICADOR RPAREN LBRACE statement RBRACE .

    RBRACE          reduce using rule 5 (method_decl -> STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENTIFICADOR RPAREN LBRACE statement RBRACE .)


state 30

    (6) statement -> CONSOLE DOT . WRITELINE LPAREN CADENA RPAREN SEMICOLON

    WRITELINE       shift and go to state 31


state 31

    (6) statement -> CONSOLE DOT WRITELINE . LPAREN CADENA RPAREN SEMICOLON

    LPAREN          shift and go to state 32


state 32

    (6) statement -> CONSOLE DOT WRITELINE LPAREN . CADENA RPAREN SEMICOLON

    CADENA          shift and go to state 33


state 33

    (6) statement -> CONSOLE DOT WRITELINE LPAREN CADENA . RPAREN SEMICOLON

    RPAREN          shift and go to state 34


state 34

    (6) statement -> CONSOLE DOT WRITELINE LPAREN CADENA RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 35


state 35

    (6) statement -> CONSOLE DOT WRITELINE LPAREN CADENA RPAREN SEMICOLON .

    RBRACE          reduce using rule 6 (statement -> CONSOLE DOT WRITELINE LPAREN CADENA RPAREN SEMICOLON .)

